--- a/test/action.yml
+++ b/test/action.yml
@@ -10,6 +10,10 @@ runs:
   using: 'composite'
 
   steps:
+    - name: Matrix Settings
+      shell: sh
+      run: echo ${{ toJSON(matrix) }}
+      
     - name: Install Terraform (Alpine)
       if: startsWith(matrix.container.image, 'alpine:')
       shell: sh
