--- a/matrix/action.yml
+++ b/matrix/action.yml
@@ -115,25 +115,25 @@ runs:
             minor=$(echo $version | cut -d. -f2)
             # Exclude Amazon Linux 1/2 with any version less than 14
             if ! ( [ $major -eq 0 ] && [ $minor -lt 14 ] && ( [ "$image" = "amazonlinux:1" ] || [ "$image" = "amazonlinux:2" ] )) then
-              matrix+=("{\"container\": {\"image\": \"$image\"}, \"terraform_version\": \"$version\", \"runs-on\": \"ubuntu-latest\"}")
+              matrix+=("{\"container\": {\"image\": \"$image\"}, \"runs-on\": \"ubuntu-latest\", \"terraform_version\": \"$version\", \"shells\": \"false\"}")
             fi
           done
         done
 
         # Add the Linux shell configurations
         for version in $(echo "${tf_versions}" | jq -r '.[]'); do
-          matrix+=("{\"terraform_version\": \"$version\", \"runs-on\": \"ubuntu-latest\", \"shells\": \"true\", \"container\": \"\"}")
+          matrix+=("{\"container\": \"\", \"runs-on\": \"ubuntu-latest\", \"terraform_version\": \"$version\", \"shells\": \"true\"}")
         done
 
         # Add the non-Linux configurations
         for os in $(echo "${windows_versions}" | jq -r '.[]'); do
           for version in $(echo "${tf_versions}" | jq -r '.[]'); do
-            matrix+=("{\"runs-on\": \"$os\", \"terraform_version\": \"$version\", \"container\": \"\"}")
+            matrix+=("{\"container\": \"\", \"runs-on\": \"$os\", \"terraform_version\": \"$version\", \"shells\": \"false\"}")
           done
         done
         for os in $(echo "${macos_versions}" | jq -r '.[]'); do
           for version in $(echo "${tf_versions}" | jq -r '.[]'); do
-            matrix+=("{\"runs-on\": \"$os\", \"terraform_version\": \"$version\", \"container\": \"\"}")
+            matrix+=("{\"container\": \"\", \"runs-on\": \"$os\", \"terraform_version\": \"$version\", \"shells\": \"false\"}")
           done
         done
 
