--- a/test/action.yml
+++ b/test/action.yml
@@ -10,6 +10,12 @@ runs:
   using: 'composite'
 
   steps:
+
+    - name: Matrix Config
+      shell: sh
+      run: |
+        echo "${{ toJSON(matrix) }}"
+
     - name: Install Terraform (Alpine)
       if: startsWith(matrix.container.image, 'alpine:')
       shell: sh
@@ -85,57 +91,35 @@ runs:
 
     # Do an apply for each shell we want to test, if it's a specific shell
     - name: Terraform Apply (bash)
-      if: matrix.shell == 'true'
+      if: matrix.shells == 'true'
       shell: sh
       working-directory: ${{ inputs.testing_path }}
       run: terraform apply -auto-approve -var "unix_interpreter=/bin/bash"
     - name: Terraform Destroy (bash)
-      if: matrix.shell == 'true'
+      if: matrix.shells == 'true'
       shell: sh
       working-directory: ${{ inputs.testing_path }}
       run: terraform destroy -auto-approve -var "unix_interpreter=/bin/bash"
 
-    - name: Terraform Apply (ksh)
-      if: matrix.shell == 'true'
-      shell: sh
-      working-directory: ${{ inputs.testing_path }}
-      run: terraform apply -auto-approve -var "unix_interpreter=/bin/ksh"
-    - name: Terraform Destroy (ksh)
-      if: matrix.shell == 'true'
-      shell: sh
-      working-directory: ${{ inputs.testing_path }}
-      run: terraform destroy -auto-approve -var "unix_interpreter=/bin/ksh"
-
-    - name: Terraform Apply (ash)
-      if: matrix.shell == 'true'
-      shell: sh
-      working-directory: ${{ inputs.testing_path }}
-      run: terraform apply -auto-approve -var "unix_interpreter=/bin/ash"
-    - name: Terraform Destroy (ash)
-      if: matrix.shell == 'true'
-      shell: sh
-      working-directory: ${{ inputs.testing_path }}
-      run: terraform destroy -auto-approve -var "unix_interpreter=/bin/ash"
-
     - name: Terraform Apply (dash)
-      if: matrix.shell == 'true'
+      if: matrix.shells == 'true'
       shell: sh
       working-directory: ${{ inputs.testing_path }}
       run: terraform apply -auto-approve -var "unix_interpreter=/bin/dash"
     - name: Terraform Destroy (dash)
-      if: matrix.shell == 'true'
+      if: matrix.shells == 'true'
       shell: sh
       working-directory: ${{ inputs.testing_path }}
       run: terraform destroy -auto-approve -var "unix_interpreter=/bin/dash"
 
     # Apply the Terraform config without specifying a shell
     - name: Terraform Apply
-      if: matrix.shell != 'true'
+      if: matrix.shells != 'true'
       shell: sh
       working-directory: ${{ inputs.testing_path }}
       run: terraform apply -auto-approve
     - name: Terraform Destroy
-      if: matrix.shell == 'true'
+      if: matrix.shells != 'true'
       shell: sh
       working-directory: ${{ inputs.testing_path }}
       run: terraform destroy -auto-approve
