--- a/apply-destroy/action.yml
+++ b/apply-destroy/action.yml
@@ -42,6 +42,18 @@ runs:
       run: |
         echo "${{ steps.input-vars.outputs.tf_vars }}"
 
+    - name: Path
+      shell: sh
+      run: |
+        pwd
+
+    
+    - name: LS
+      shell: sh
+      run: |
+        ls -la
+
+
     # Apply the Terraform config
     - name: Terraform Apply
       shell: sh
