--- a/initialize/action.yml
+++ b/initialize/action.yml
@@ -1,9 +1,9 @@
-name: 'Terraform Module Testing'
+name: 'Terraform Module Initialization'
 description: 'Tests the Terraform module.'
 
 inputs:
-  testing_path:
-    description: "The path to the directory that contains the Terraform testing configuration."
+  tf_path:
+    description: "The path to the directory that contains the Terraform configuration."
     required: true
 
 runs:
@@ -86,40 +86,5 @@ runs:
     # Initialize the workspace
     - name: Terraform Init
       shell: sh
-      working-directory: ${{ inputs.testing_path }}
+      working-directory: ${{ inputs.tf_path }}
       run: terraform init
-
-    # Do an apply for each shell we want to test, if it's a specific shell
-    - name: Terraform Apply (bash)
-      if: matrix.shells == 'true'
-      shell: sh
-      working-directory: ${{ inputs.testing_path }}
-      run: terraform apply -auto-approve -var "unix_interpreter=/bin/bash"
-    - name: Terraform Destroy (bash)
-      if: matrix.shells == 'true'
-      shell: sh
-      working-directory: ${{ inputs.testing_path }}
-      run: terraform destroy -auto-approve -var "unix_interpreter=/bin/bash"
-
-    - name: Terraform Apply (dash)
-      if: matrix.shells == 'true'
-      shell: sh
-      working-directory: ${{ inputs.testing_path }}
-      run: terraform apply -auto-approve -var "unix_interpreter=/bin/dash"
-    - name: Terraform Destroy (dash)
-      if: matrix.shells == 'true'
-      shell: sh
-      working-directory: ${{ inputs.testing_path }}
-      run: terraform destroy -auto-approve -var "unix_interpreter=/bin/dash"
-
-    # Apply the Terraform config without specifying a shell
-    - name: Terraform Apply
-      if: matrix.shells != 'true'
-      shell: sh
-      working-directory: ${{ inputs.testing_path }}
-      run: terraform apply -auto-approve
-    - name: Terraform Destroy
-      if: matrix.shells != 'true'
-      shell: sh
-      working-directory: ${{ inputs.testing_path }}
-      run: terraform destroy -auto-approve
