--- a/matrix/action.yml
+++ b/matrix/action.yml
@@ -43,7 +43,7 @@ runs:
         done
         images=$(echo "$images" | jq -r ". | unique")
         echo "Images: $images"
-        #echo images="$images" >>$GITHUB_OUTPUT
+        echo images="$images" >>$GITHUB_OUTPUT
 
     # Get the list of operating systems to test on
     - name: Get Operating Systems
