--- a/matrix/action.yml
+++ b/matrix/action.yml
@@ -104,7 +104,7 @@ runs:
                     fi
                 fi
             fi
-        done <<<$(echo "$version_lines" | grep -oE "[0-9]+\.[0-9]+\.[0-9]+" | sort --version-sort --field-separator=.)
+        done <<<$(echo "$version_lines" | grep -oE "[0-9]+\.[0-9]+\.[0-9]+" | sort --version-sort --reverse --field-separator=.)
 
         # Sort the version numbers, descending
         IFS=$'\n' selected_versions=($(sort -r --version-sort --field-separator=. <<<"${selected_versions[*]}"))
