--- a/initialize/action.yml
+++ b/initialize/action.yml
@@ -16,6 +16,23 @@ runs:
       run: |
         echo "${{ toJSON(matrix) }}"
 
+    - name: Install unzip
+      shell: sh
+      run: |
+        if command -v apk &> /dev/null; then
+            apk add --no-cache unzip
+        elif command -v yum &> /dev/null; then
+            yum install -y unzip
+        elif command -v dnf &> /dev/null; then
+            dnf install -y unzip
+        elif command -v apt-get &> /dev/null; then
+            apt-get update
+            apt-get install -y unzip
+        else
+            echo "No package manager available"
+            exit 1
+        fi
+
     # - name: Install Terraform (Alpine)
     #   if: startsWith(matrix.container.image, 'alpine:')
     #   shell: sh
