--- a/initialize/action.yml
+++ b/initialize/action.yml
@@ -50,6 +50,7 @@ runs:
       shell: sh
       run: |
         yum install -y yum-utils git
+        yum update glibc
         yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
         yum -y install terraform-${{ matrix.terraform_version }}
 
