--- a/initialize/action.yml
+++ b/initialize/action.yml
@@ -17,8 +17,14 @@ runs:
         echo "${{ toJSON(matrix) }}"
 
     - name: Install Packages
+      if: matrix.container.image != ""
       shell: sh
       run: |
+        if test -f "/etc/centos-release"; then
+          sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
+          sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
+        fi
+
         if [ -x "$(command -v apk)" ];
         then
           apk add --no-cache git unzip nodejs
