--- a/initialize/action.yml
+++ b/initialize/action.yml
@@ -28,18 +28,21 @@ runs:
           sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
         fi
 
+        packages_needed=(unzip nodejs tar)
+
         if [ -x "$(command -v apk)" ]; then
-          apk add --no-cache unzip nodejs
+          apk add --no-cache "${packages_needed[@]}"
         elif [ -x "$(command -v apt-get)" ]; then
           apt-get update
-          apt-get install -y unzip nodejs
+          apt-get install -y "${packages_needed[@]}"
         elif [ -x "$(command -v dnf)" ]; then
-          dnf install -y unzip nodejs 
+          dnf install -y "${packages_needed[@]}"
         elif [ -x "$(command -v yum)" ]; then
           yum -y update
-          yum install -y unzip nodejs 
+          yum install -y "${packages_needed[@]}"
         else
-          echo "FAILED TO INSTALL PACKAGE: Package manager not found. You must manually install: "${packagesNeeded[@]}"">&2;
+          echo "No package manager found">&2
+          exit 1
         fi
 
     # - name: Install Terraform (Alpine)
